# CodexProxy

./: .gitignore  README.md  package-lock.json  package.json
scripts/: start.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: codex_config.rs  convert.rs  lib.rs  log_writer.rs  main.rs  proxy.rs  stream.rs  types.rs
src/components/: JsonViewer.tsx  LogPanel.tsx  ProxyCard.tsx  ProxyModal.tsx  ProxyPanel.tsx  TopBar.tsx
src/hooks/: useProxyStore.ts
src/styles/: base.css  controls.css
src/styles/themes/: dark.css  light.css
src/types/: app.ts
