[package]
name = "codex-proxy"
version = "0.1.0"
description = "Codex Responses API → Chat Completions API 协议转换代理"
authors = ["gemini"]
edition = "2021"

[lib]
name = "codex_proxy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
log = "0.4"
tauri-plugin-log = "2"
chrono = "0.4"
toml_edit = "0.22"
